# SevDeskClient

./: .gitignore  README.md  help.html  package-lock.json  package.json
src/: index.html  main.js  old_index.html  styles.css  stylesheet.css
src-tauri/: Cargo.toml  config.json  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: lib.rs
