[package]
name = "sev_desk_donation_cerficates"
version = "0.0.0"
description = "A windows-app style GUI to run and access the SevDesk-DonationsServer and manage automatically created Donation-Certificates."
authors = ["Josia Scheerle"]
license = ""
repository = "https://github.com/ScheerleJo/SevDeskDonationsGUI"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
