[package]
name = "sev_desk_donation_cerficates"
version = "1.2.0"
description = "A windows-app style GUI to run and access the SevDesk-DonationsServer and manage automatically created Donation-Certificates."
authors = ["Josia Scheerle"]
license = ""
repository = "https://github.com/ScheerleJo/SevDeskClient"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib", "lib"]
